--- a/static/homepage.css
+++ b/static/homepage.css
@@ -11,7 +11,7 @@
   --secondary-text-color: #878787;
   --accent-color: #E0FBFC;
   --accent-color-dark: #243c53;
-  --padding-inline-section: 20px;
+  --padding-inline-section: 10px;
   --background-color: #FFFFFF;
 }
 
@@ -64,7 +64,7 @@ ul {
 
 .container {
   max-width: 1180px;
-  margin-inline: auto;
+  /* margin-inline: auto; */
   padding-inline: var(--padding-inline-section);
 }
 
@@ -165,7 +165,7 @@ ul {
 /* Header Part!! */
 .header-section {
   justify-content: flex-start;
-  background-image: url(static/header-image1.jpg);
+  background: url('header-image1.jpg') no-repeat;
   height: 700px;
   background-size: cover;
   color: var(--accent-color);
@@ -181,19 +181,22 @@ ul {
 
 
 .big-feature-section {
-  padding: 30px var(--padding-inline-section) 0;
-  margin-bottom: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding-top: 30px ;
+  margin-bottom: 20px; 
+  display: flex;
+  align-items: flex-start;
+  /* margin-left: 30px;
+  margin-right: 30px; */
 }
 
 .big-feature-container {
   gap: 30px;
-  margin-left: 30px;
+  align-items: flex-start;
+  /* margin-left: 30px; */
 }
 
 .feature-img img {
-  width:600px;
+  width:6000px;
   height: auto;
 }
 
@@ -220,7 +223,7 @@ ul {
 
 .features-section {
   margin-top: 30px;
-  padding: 50px var(--padding-inline-section) 0;
+  padding-top: 40px ;
   background-color: var(--primary-text-color);
 }
 
