--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-  <div class="container">
+<div class="container-main">
   <!-- Nav bar   -->
   <nav>
-    <div class="flex main-nav" style="width: 100%; margin-top: 0px;">
+    <div class="flex main-nav" style=" margin-top: 0px;">
       <a href="#" class="company-logo img"><img src="static/logo.png" alt="company-logo"></a>
       <div class="nav-links">
-        <ul class="fle">
+        <ul class="fle" style="padding: 5px;">
           <li><a href="/" class="hover-link">Home</a></li>
           <!-- <li><a href="/aboutus" class="hover-link">About Us</a></li>
          <li><a href="/faq" class="hover-link">FAQ's</a></li> -->
@@ -45,10 +45,10 @@
                       
                      
            
-          </div>
         </ul>
+          </div>
       </div>
-    </div>
+    
   </nav>
 
   <!-- Header Image Part -->
@@ -152,6 +152,7 @@
     </div>
   </footer>
 </div>
+
   <script src="https://kit.fontawesome.com/cb88b54bf5.js" crossorigin="anonymous"></script>
 </body>
 
