--- a/static/homepage.css
+++ b/static/homepage.css
@@ -62,8 +62,8 @@ ul {
   font-weight: 600;
 }
 
-.container {
-  max-width: 1180px;
+.container-main {
+  max-width: 1580px;
   /* margin-inline: auto; */
   padding-inline: var(--padding-inline-section);
 }
@@ -71,7 +71,7 @@ ul {
 /* nav bar */
 .main-nav {
   margin-top: 5px;
-  position: fixed;
+  position: sticky;
   justify-content: space-between;
 }
 
@@ -150,7 +150,7 @@ ul {
 }
 
 .nav-links {
-  /* flex-basis: 730px; */
+  flex-basis: 730px;
 
   justify-content: space-between;
   font-weight: 400;
@@ -279,6 +279,7 @@ footer {
 }
 
 .footer-container {
+  margin:5px;
   align-items: flex-start;
   justify-content: space-between;
 }
