--- a/static/homepage.css
+++ b/static/homepage.css
@@ -275,7 +275,8 @@ footer {
 .link-coloumn {
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px
+  gap: 20px;
+  margin:10px;
 }
 
 .footer-container {
